[tool.poetry]
name = "drqn"
version = "0.1.0"
description = ""
authors = ["Noah Farr <login@noahfarr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
numpy = "^2.0.1"
gymnasium = "^0.29.1"
tyro = "^0.8.5"
stable-baselines3 = "^2.3.2"
tensorboard = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
